# blog

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  docker-compose.yml
.github/workflows/: build-ami.yml  build-images.yml  deploy-aws.yml
content/posts/: creating-golden-images-with-packer.md  deploying-hashicorp-vault-on-proxmox.md  hello-world.md  homelab-network-opnsense-proxmox.md  proxmox-bootstrap-automation.md
opentofu/: backend.hcl.example  ec2_route53.tf  main.tf  outputs.tf  variables.tf
packer/: blog-ami.pkr.hcl
src/: DEPRECATED.md
src/backend/: .env.example  AGENTS.md  Dockerfile  README.md  cache.py  config.py  content_store.py  logging_config.py  main.py  middleware.py  models.py  pyproject.toml  ruff.toml  s3_client.py  telemetry.py
src/backend/tests/: __init__.py  conftest.py  test_content_store.py  test_main.py  test_models.py  test_s3_client.py
src/frontend/: .eslintrc.cjs  AGENTS.md  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json
src/frontend/src/: App.tsx  index.css  types.ts
src/frontend/src/components/: ErrorBoundary.tsx  Hero.css  Hero.tsx  PostList.tsx
src/frontend/src/lib/: api.ts
src/frontend/src/pages/: About.tsx  Home.tsx  Post.tsx  Tags.tsx
src/nginx/: nginx-ssl.conf  nginx.conf  nginx.conf.template
src/nginx/sites-available/: dev-blog.conf
