[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "dev-blog-backend"
version = "0.1.0"
description = "FastAPI backend for personal dev blog serving Markdown from S3"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Alejandro" }
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "boto3==1.34.162",
  "python-frontmatter==1.0.0",
  "PyYAML==6.0.1",
  "cachetools==5.3.3",
  "pydantic-settings==2.4.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
  "mypy>=1.7.1",
  "ruff>=0.1.11",
  "httpx>=0.25.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "cachetools", "frontmatter"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
